--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
     body {
         background-color: #edf2f8;
         font-family: 'Barlow Semi Condensed', sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
     }
 
     .container {
